# origin

./: .gitignore  AGENTS.md
direct-infusion-quant/: .gitignore  AGENTS.md  README.md  pyproject.toml
direct-infusion-quant/docs/: WINDOWS_PACKAGING.md
direct-infusion-quant/packaging/: DirectInfusionQuant.spec  pyopenms_worker_entry.py  windows_version_info.txt
direct-infusion-quant/scripts/: build_windows.ps1
direct-infusion-quant/src/direct_infusion_quant/: __init__.py  __main__.py  app.py  logging_config.py  models.py  packaging_smoke.py
direct-infusion-quant/src/direct_infusion_quant/calibration/: __init__.py  diagnostics.py  regression.py
direct-infusion-quant/src/direct_infusion_quant/export/: __init__.py  csv_export.py  excel_export.py  plot_export.py  tables.py
direct-infusion-quant/src/direct_infusion_quant/gui/: __init__.py  main_window.py  pages.py  relink_dialog.py  workers.py
direct-infusion-quant/src/direct_infusion_quant/io/: __init__.py  _pyopenms_worker.py  base.py  factory.py  pymzml_reader.py  pyopenms_process_reader.py  pyopenms_reader.py
direct-infusion-quant/src/direct_infusion_quant/persistence/: __init__.py  project_file.py
direct-infusion-quant/src/direct_infusion_quant/processing/: __init__.py  extraction.py  (+2 more)
direct-infusion-quant/tests/: reader_parity_runner.py  test_app.py  test_calibration.py  test_exports.py  test_gui_workflows.py  test_metadata_inspection_regressions.py  test_models.py  test_processing.py  test_project_file.py  test_pymzml_reader.py  test_reader_factory.py  test_reader_parity.py  test_stability.py
(+1 files in other folders)
