[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "direct-infusion-quant"
version = "0.1.0"
description = "Desktop peptide quantitation from direct-infusion mzML data"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.1",
    "pydantic>=2.6",
    "pymzml>=2.5",
    "PySide6>=6.6",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
pyopenms = [
    "pyopenms>=3.0,<4",
]
dev = [
    "pyinstaller>=6.21,<7",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
]

[project.scripts]
direct-infusion-quant = "direct_infusion_quant.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/direct_infusion_quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
